--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@mipmap/gradientbackground"
     android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
 
-
+   android:orientation="vertical"
+    android:gravity="center"
     >
 
-<include layout="@layout/year_picker"
-    android:layout_width="match_parent"
-    android:layout_height="500dp"
-    android:layout_alignParentTop="true"
-    android:layout_alignParentStart="true"
-    android:layout_marginTop="300px"
+    <include layout="@layout/year_picker"
+        android:layout_width="320dp"
+        android:layout_height="477dp"
+
+
     />
 
 
-</RelativeLayout>
+</LinearLayout>
