--- a/app/src/main/res/layout/year_picker.xml
+++ b/app/src/main/res/layout/year_picker.xml
@@ -10,7 +10,7 @@
 
     >
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="250dp"
         android:layout_height="0dp"
         android:orientation="vertical"
         android:layout_weight="0.8"
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content"
             android:text="Select Year Of Birth"
             android:gravity="center"
-            android:textSize="12pt"
+            android:textSize="10pt"
             android:textColor="@color/colorPrimaryDark"
             android:padding="20dp"
 
@@ -32,7 +32,7 @@
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="2dp"
+            android:layout_height="0.5dp"
             android:layout_marginEnd="20dp"
             android:layout_marginStart="20dp"
             android:background="@color/colorPrimary"
@@ -64,12 +64,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:src="@mipmap/uparrow"
-                    android:padding="20dp"
+                    android:padding="10dp"
                     android:background="#FFF"
                     />
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="2dp"
+                    android:layout_height="0.5dp"
                     android:layout_marginTop="10dp"
                     android:background="@color/colorPrimary"
                     />
@@ -77,7 +77,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="20"
-                    android:textSize="70sp"
+                    android:textSize="50sp"
 
 
                     android:textColor="@color/colorPrimary"
@@ -85,7 +85,7 @@
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="2dp"
+                    android:layout_height="0.5dp"
                     android:layout_marginTop="10dp"
                     android:background="@color/colorPrimaryDark"
                     />
@@ -94,7 +94,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:src="@mipmap/downarow"
-                    android:padding="20dp"
+                    android:padding="10dp"
                     android:background="#FFF"
                     />
 
@@ -117,12 +117,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:src="@mipmap/uparrow"
-                    android:padding="20dp"
+                    android:padding="10dp"
                     android:background="#FFF"
                     />
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="2dp"
+                    android:layout_height="0.5dp"
                     android:layout_marginTop="10dp"
                     android:background="@color/colorPrimary"
                     />
@@ -130,7 +130,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="1"
-                    android:textSize="70sp"
+                    android:textSize="50sp"
 
 
                     android:textColor="@color/colorPrimary"
@@ -138,7 +138,7 @@
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="2dp"
+                    android:layout_height="0.5dp"
                     android:layout_marginTop="10dp"
                     android:background="@color/colorPrimaryDark"
                     />
@@ -147,7 +147,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:src="@mipmap/downarow"
-                    android:padding="20dp"
+                    android:padding="10dp"
                     android:background="#FFF"
                     />
 
@@ -169,12 +169,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:src="@mipmap/uparrow"
-                    android:padding="20dp"
+                    android:padding="10dp"
                     android:background="#FFF"
                     />
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="2dp"
+                    android:layout_height="0.5dp"
                     android:layout_marginTop="10dp"
                     android:background="@color/colorPrimary"
                     />
@@ -182,13 +182,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="7"
-                    android:textSize="70sp"
+                    android:textSize="50sp"
                     android:textColor="@color/colorPrimary"
                     />
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="2dp"
+                    android:layout_height="0.5dp"
                     android:layout_marginTop="10dp"
                     android:background="@color/colorPrimaryDark"
                     />
@@ -197,7 +197,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:src="@mipmap/downarow"
-                    android:padding="20dp"
+                    android:padding="10dp"
                     android:background="#FFF"
                     />
 
@@ -207,12 +207,12 @@
         </LinearLayout>
     </LinearLayout>
     <Button
-        android:layout_width="match_parent"
+        android:layout_width="250dp"
         android:layout_height="0dp"
         android:background="@mipmap/buttonback"
         android:text="@string/app_name"
         android:textColor="#FFF"
-        android:textSize="60px"
+        android:textSize="17sp"
         android:layout_weight="0.2"
          />
 
